nohup.out
Server running at http://127.0.0.1:8080/
Server running at http://127.0.0.1:8080/
Server running at http://127.0.0.1:8080/
Server running at http://127.0.0.1:8080/
Server running at http://127.0.0.1:8080/
Server running at http://127.0.0.1:8080/

events.js:72
        throw er; // Unhandled 'error' event
              ^
Error: listen EADDRINUSE
    at errnoException (net.js:904:11)
    at Server._listen2 (net.js:1042:14)
    at listen (net.js:1064:10)
    at Server.listen (net.js:1138:5)
    at Object.<anonymous> (/home/pi/node_sqlite_button_pusher_1/webserver.js:101:34)
    at Module._compile (module.js:456:26)
    at Object.Module._extensions..js (module.js:474:10)
    at Module.load (module.js:356:32)
    at Function.Module._load (module.js:312:12)
    at Function.Module.runMain (module.js:497:10)
Server running at http://127.0.0.1:8080/

/home/pi/node_sqlite_button_pusher_1/webserver.js:97
  response.writeHead(200, {'Content-Type': 'text/html'});
           ^
TypeError: Cannot call method 'writeHead' of undefined
    at serveMainPage (/home/pi/node_sqlite_button_pusher_1/webserver.js:97:12)
    at Object.<anonymous> (/home/pi/node_sqlite_button_pusher_1/webserver.js:113:1)
    at Module._compile (module.js:456:26)
    at Object.Module._extensions..js (module.js:474:10)
    at Module.load (module.js:356:32)
    at Function.Module._load (module.js:312:12)
    at Function.Module.runMain (module.js:497:10)
    at startup (node.js:119:16)
    at node.js:906:3
Server running on port 8080
Server running on port 8080
Server running on port 8080
Server running on port 8080
Server running on port 8080
Server running on port 8080
Server running on port 8080
Server running on port 8080
Server running on port 8080
Server running on port 8080
Server running on port 8080
Server running on port 8080
Server running on port 8080
Server running on port 8080
Server running on port 8080
Server running on port 8080
Server running on port 8080
Server running on port 8080
Server running on port 8080
Server running on port 8080
Server running on port 8080
Server running on port 8080
Server running on port 8080
Server running on port 8080
Server running on port 8080
Server running on port 8080
Server running on port 8080
Server running on port 8080
Server running on port 8080
Server running on port 8080
Server running on port 8080
Server running on port 8080
Server running on port 8080
Server running on port 8080
Server running on port 8080
Server running on port 8080
Server running on port 8080
Server running on port 8080
Server running on port 8080
Server running on port 8080
Server running on port 8080
Server running on port 8080

/home/pi/node_sqlite_button_pusher_1/webserver.js:84
  });
   ^
SyntaxError: Unexpected token )
    at Module._compile (module.js:439:25)
    at Object.Module._extensions..js (module.js:474:10)
    at Module.load (module.js:356:32)
    at Function.Module._load (module.js:312:12)
    at Function.Module.runMain (module.js:497:10)
    at startup (node.js:119:16)
    at node.js:906:3
Server running on port 8080
Server running on port 8080
Server running on port 8080
Server running on port 8080
Server running on port 8080

events.js:72
        throw er; // Unhandled 'error' event
              ^
Error: listen EADDRINUSE
    at errnoException (net.js:904:11)
    at Server._listen2 (net.js:1042:14)
    at listen (net.js:1064:10)
    at Server.listen (net.js:1138:5)
    at startWebServer (/home/pi/node_sqlite_button_pusher_1/webserver.js:129:36)
    at cacheDbResponseHtml (/home/pi/node_sqlite_button_pusher_1/webserver.js:124:3)
    at Object.<anonymous> (/home/pi/node_sqlite_button_pusher_1/webserver.js:134:1)
    at Module._compile (module.js:456:26)
    at Object.Module._extensions..js (module.js:474:10)
    at Module.load (module.js:356:32)
Server running on port 8080
Server running on port 8080
Server running on port 8080
Server running on port 8080
Server running on port 8080
Server running on port 8080

/home/pi/node_sqlite_button_pusher_1/webserver.js:92
  response.end(loadingSpinner);
               ^
ReferenceError: loadingSpinner is not defined
    at serveLoadingSpinnerGif (/home/pi/node_sqlite_button_pusher_1/webserver.js:92:16)
    at Server.handleRequest (/home/pi/node_sqlite_button_pusher_1/webserver.js:36:5)
    at Server.emit (events.js:98:17)
    at HTTPParser.parser.onIncoming (http.js:2108:12)
    at HTTPParser.parserOnHeadersComplete [as onHeadersComplete] (http.js:121:23)
    at Socket.socket.ondata (http.js:1966:22)
    at TCP.onread (net.js:527:27)
Server running on port 8080
Server running on port 8080

/home/pi/node_sqlite_button_pusher_1/webserver.js:123
  responseBody += data;
                  ^
ReferenceError: data is not defined
    at serveMainPage (/home/pi/node_sqlite_button_pusher_1/webserver.js:123:19)
    at Server.handleRequest (/home/pi/node_sqlite_button_pusher_1/webserver.js:42:5)
    at Server.emit (events.js:98:17)
    at HTTPParser.parser.onIncoming (http.js:2108:12)
    at HTTPParser.parserOnHeadersComplete [as onHeadersComplete] (http.js:121:23)
    at Socket.socket.ondata (http.js:1966:22)
    at TCP.onread (net.js:527:27)
Server running on port 8080

/home/pi/node_sqlite_button_pusher_1/webserver.js:123
  responseBody += data;
                  ^
ReferenceError: data is not defined
    at serveMainPage (/home/pi/node_sqlite_button_pusher_1/webserver.js:123:19)
    at Server.handleRequest (/home/pi/node_sqlite_button_pusher_1/webserver.js:42:5)
    at Server.emit (events.js:98:17)
    at HTTPParser.parser.onIncoming (http.js:2108:12)
    at HTTPParser.parserOnHeadersComplete [as onHeadersComplete] (http.js:121:23)
    at Socket.socket.ondata (http.js:1966:22)
    at TCP.onread (net.js:527:27)
Server running on port 8080
Server running on port 8080
Server running on port 8080
Server running on port 8080
Server running on port 8080
module.js:327
    throw err;
    ^

Error: Cannot find module '/home/pi/node_sqlite_button_pusher_1/node_modules/sqlite3/lib/binding/node-v46-linux-arm/node_sqlite3.node'
    at Function.Module._resolveFilename (module.js:325:15)
    at Function.Module._load (module.js:276:25)
    at Module.require (module.js:353:17)
    at require (internal/module.js:12:17)
    at Object.<anonymous> (/home/pi/node_sqlite_button_pusher_1/node_modules/sqlite3/lib/sqlite3.js:4:15)
    at Module._compile (module.js:409:26)
    at Object.Module._extensions..js (module.js:416:10)
    at Module.load (module.js:343:32)
    at Function.Module._load (module.js:300:12)
    at Module.require (module.js:353:17)
